Signed-off-by: SantiagoIX <santiagopinedapelaez@gmail.com>

--- a/NFTSMONKEY.html
+++ b/NFTSMONKEY.html
@@ -7,8 +7,11 @@
     <title>NFTS MONKEY</title>
 </head>
 <body>
+    <section>
     <img src="./monhey.jfif" height="200px" width="200px"/>
     <h3>Mono</h3>
     <b>10000 usdt</b>
+    </section>
+    <a href="NFTS.html"> Volver</a>
 </body>
 </html>
