--- a/NFTSROMA.html
+++ b/NFTSROMA.html
@@ -7,13 +7,19 @@
     <title>NFTS ROMA</title>
 </head>
 <body>
-<div>
-    <section>
-    <img src="./legion.jpg" height="200px" width="200px"/>
-    <h3>Legion XXI</h3>
-    <b>15000 usdt</b>
-    <span>================</span>
-    </section>
-</div>
+ <div>
+     <header>
+         <h1>NFTS ROMA</h1>
+    </header>
+    <hr>
+    <ul>
+       <section>
+         <img src="./legion.jpg" height="200px" width="200px"/>
+         <h3>Legion XXI</h3>
+         <b>15000 usdt</b>
+       </section>
+      <a href="NFTS.html"> Volver</a>
+  </ul>
+ </div>
 </body>
 </html>
